<resources>

    <string name="app_name">mBB</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">mBB</string>
    <string name="Fetch_Info">Fetch Info</string>
    <string name="login_key">Enter Login Key</string>
    <string name="login_continue">Continue</string>
    <string name="login_clear">Clear</string>
    <string name="Welcome_user">"Welcome, "</string>
    <string name="prof_post">Post</string>
    <string name="home_announcements">Annoucements</string>
    <string name="home_rating">Rating</string>
    <string name="rating_all">Overall Rating</string>
    <string name="rating_lookfeel">Look &amp; feel</string>
    <string name="rating_usability">Usability</string>
    <string name="rating_quality">Quality</string>
    <string name="rating_clear_all">Clear All</string>
    <string name="rating_submit">Submit</string>
    <string name="home_assignments">Assignments</string>
    <string name="prof_time">Pick Time</string>
    <string name="prof_date">Pick Date</string>
    
</resources>