<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uc1" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="78dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar1"
        android:text="@string/rating_all" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:text="@string/rating_quality" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView03"
        android:layout_alignParentLeft="true"
        android:text="@string/rating_usability" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_alignParentLeft="true"
        android:text="@string/rating_lookfeel" />

    <Button
        android:id="@+id/button1"
        style="@layout/black_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView01"
        android:background="@layout/black_button"
        android:text="@string/rating_clear_all"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingBar1"
        android:layout_alignRight="@+id/ratingBar1"
        android:layout_centerVertical="true"
        />

    <Button
        android:id="@+id/button2"
        style="@layout/black_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:background="@layout/black_button"
        android:text="@string/rating_submit"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/rating_usability"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar2"
        android:layout_toRightOf="@+id/textView4"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ratingBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/TextView02"
        android:layout_marginBottom="17dp"
        android:text="@string/rating_quality"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar1"
        android:layout_alignLeft="@+id/ratingBar1"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ratingBar4"
        android:layout_alignRight="@+id/button1"
        android:text="@string/rating_lookfeel"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>